--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@
 baseURL = "https://jkirsch85.github.io/luxe-jet-life/"
 languageCode = "en-us"
 title = "Luxe Jet Life"
-theme = "ananke"
+theme = "luxe_jet_life_custom_theme"
